# Habit_Tracker

./: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
config/config/: settings.py
habits/: models.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
