[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["SergeyZaprudnov <szaprudnov@hotmail.com>"]
readme = "README.md"
packages = [{include = "habit_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
