[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["SergeyZaprudnov <szaprudnov@hotmail.com>"]
readme = "README.md"
packages = [{include = "habit_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-dotenv = "^1.0.0"
psycopg = "^3.1.9"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
celery = "^5.3.1"
eventlet = "^0.33.3"
redis = "^5.0.0"
django-celery-beat = "^2.5.0"
requests = "^2.31.0"
django-cors-headers = "^4.2.0"
drf-yasg = "^1.21.7"
coverage = "^7.2.7"
flake8 = "^6.1.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
